tests/baselines/reference/cloduleStaticMembers.errors.txt
==== tests/cases/compiler/cloduleStaticMembers.ts (3 errors) ====
    class Clod {
        private static x = 10;
        public static y = 10;
    }
    module Clod {
        var p = Clod.x;
                ~~~~~~
!!! error TS2341: Property 'Clod.x' is inaccessible.
        var q = x;
                ~
!!! error TS2304: Cannot find name 'x'.
    
        var s = Clod.y;
        var t = y; 
                ~
!!! error TS2304: Cannot find name 'y'.
    }
    